# AirTurtle

basic_funcionalities/camera_module/camera_module/: CMakeLists.txt  package.xml
basic_funcionalities/camera_module/devel/: .catkin  .rosinstall  setup.sh
basic_funcionalities/feedback/devel/: .catkin  .rosinstall  setup.sh
basic_funcionalities/feedback/feedback/: CMakeLists.txt  package.xml
basic_funcionalities/line_navigation/devel/: .catkin  .rosinstall  setup.sh
basic_funcionalities/line_navigation/line_navigaton/: CMakeLists.txt  package.xml
basic_funcionalities/line_sensor/devel/: .catkin  .rosinstall  setup.sh
basic_funcionalities/line_sensor_module/devel/: .catkin  .rosinstall  setup.sh
basic_funcionalities/line_sensor_module/line_sersor_module/: CMakeLists.txt  package.xml
basic_functionalities/camera_module/src/camera_module/: CMakeLists.txt  package.xml
basic_functionalities/camera_module/src/camera_module/msg/: camera_orientation.msg
src/basic_functionalities/navigation/navigation/: CMakeLists.txt
src/basic_functionalities/navigation/navigation/config/: pois_basic_functionalities.yaml  trace.yalm  trace_2.yalm
src/basic_functionalities/navigation/navigation/launch/: navigation.launch
src/basic_functionalities/navigation/navigation/msg/: navigationAutonomusEnable.msg  sensor_raw_data.msg
src/basic_functionalities/navigation/navigation/src/: followLine.py  followLine_hardTwist.py  hardcode.py  hardcode_line.py  hardcode_line_params.py  hardcode_params.py
src/utilities/exe/: kyanite.desktop  (+5 more)
utilities/configuration_files/: .bashrc~
(+65 files in other folders)
